web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__select__examples__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nselect name = f\"{first_name} {last_name}\"\n"
---
SELECT CONCAT(first_name, ' ', last_name) AS name FROM employees
