web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__select__examples__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nselect {\n  name = f\"{first_name} {last_name}\",\n  age_eoy = dob - @2022-12-31,\n}\n"
---
SELECT
    CONCAT(first_name, ' ', last_name) AS name,
    dob - DATE '2022-12-31' AS age_eoy
FROM employees
