web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__select__examples__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nselect first_name\n"
---
SELECT first_name FROM employees
