web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__select__examples__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "from e=employees\nselect {e.first_name, e.last_name}\n"
---
SELECT
    first_name,
    last_name
FROM employees
